# vulkan_deffered_shadows

./: CMakeLists.txt  CMakeSettings.json  ReadMe.txt
assets/duck/: mat.mtl
task_1/: CMakeLists.txt  GLFWObject.cpp  Model.cpp  VulkanObject.cpp
task_1/include/task_1/: GLFWObject.h  UBO.h  Vertex.h  VulkanObject.h
task_1/shaders/: geometry_pass.frag  geometry_pass.vert  lighting_pass.frag  lighting_pass.vert
task_2/: CMakeLists.txt  Model.cpp  VulkanObject.cpp  main.cpp
task_2/include/task_1/: HelperFunctions.h  Model.h  UBO.h  VulkanObject.h  VulkanStructs.h
task_2/shaders/: geometry_pass.vert  lighting_pass.frag  shadow_pass.frag  shadow_pass.vert
