# CMakeList.txt : CMake project for Vulkan0, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (task_2 "main.cpp" "VulkanObject.cpp" "GLFWObject.cpp" "Model.cpp")

target_include_directories(task_2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

find_package(Vulkan REQUIRED)

target_compile_definitions(task_2 PRIVATE
	VK_USE_PLATFORM_WIN32_KHR
	NOMINMAX
)

target_link_libraries(task_2
	glfw
	Vulkan::Vulkan
	tinyobjloader
	glm::glm
	stb::image
	imgui
)

file(MAKE_DIRECTORY ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_vert.spv)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_frag.spv)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_vert.spv)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_frag.spv)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_vert.spv)
file(TOUCH ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_frag.spv)

add_custom_command(OUTPUT
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_vert.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_frag.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_vert.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_frag.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_vert.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_frag.spv
	COMMENT "Recompiling shaders"
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/geometry_pass.vert -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_vert.spv
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/geometry_pass.frag -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_frag.spv
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/lighting_pass.vert -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_vert.spv
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/lighting_pass.frag -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_frag.spv
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/shadow_pass.vert -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_vert.spv
	COMMAND $ENV{VULKAN_SDK}/Bin/glslc.exe ${CMAKE_CURRENT_SOURCE_DIR}/shaders/shadow_pass.frag -o ${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_frag.spv
	DEPENDS
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/geometry_pass.frag
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/geometry_pass.vert
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/lighting_pass.frag
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/lighting_pass.vert
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/shadow_pass.frag
		${CMAKE_CURRENT_SOURCE_DIR}/shaders/shadow_pass.vert
)

add_custom_target(shaders3 ALL
    DEPENDS
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_frag.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/geometry_pass_vert.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_frag.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/lighting_pass_vert.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_frag.spv
		${CMAKE_INSTALL_PREFIX}/shaders/vulkan3/shadow_pass_vert.spv
)

install(TARGETS task_2)

# TODO: Add tests and install targets if needed.
